Project

General

Profile

Bug #22254

client: give more descriptive error message for remount failures

Added by Patrick Donnelly over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Category:
Introspection/Control
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
luminous,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client, ceph-fuse
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

During remount failures:

https://github.com/ceph/ceph/blob/54e51fd3c39a38e72ed989f862e6e21515f41d3b/src/client/Client.cc#L4024-L4031

We are only outputting -1 if the mount command failed.


Related issues

Related to CephFS - Bug #17517: ceph-fuse: does not handle ENOMEM during remount Resolved 10/05/2016
Copied to CephFS - Backport #22381: luminous: client: give more descriptive error message for remount failures Rejected
Copied to CephFS - Backport #22382: jewel: client: give more descriptive error message for remount failures Rejected

History

#1 Updated by Patrick Donnelly over 5 years ago

  • Related to Bug #17517: ceph-fuse: does not handle ENOMEM during remount added

#2 Updated by Patrick Donnelly over 5 years ago

  • Status changed from New to Fix Under Review

#3 Updated by Patrick Donnelly over 5 years ago

  • Backport changed from luminous to luminous,jewel

#4 Updated by Patrick Donnelly over 5 years ago

  • Status changed from Fix Under Review to Pending Backport

#5 Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #22381: luminous: client: give more descriptive error message for remount failures added

#6 Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #22382: jewel: client: give more descriptive error message for remount failures added

#7 Updated by Nathan Cutler over 5 years ago

@Patrick: You rejected the luminous backport, but the jewel backport should still go forward - correct?

#8 Updated by Patrick Donnelly over 5 years ago

  • Status changed from Pending Backport to Resolved

No, I guess not because of http://tracker.ceph.com/issues/22378

Also available in: Atom PDF