client: give full error message on failed remount

Fixes: http://tracker.ceph.com/issues/22254

Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>